--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,4 +31,4 @@ services:
       - DJANGO_SUPERUSER_USERNAME=admin
       - DJANGO_SUPERUSER_PASSWORD=admin
       - DJANGO_SUPERUSER_EMAIL=xxx@gmail.com
-    command: /bin/sh -c "python3 manage.py makemigrations && python3 manage.py migrate && python3 manage.py createsuperuser --noinput && gunicorn -w 4 nqmonitor.wsgi"
+    command: /bin/sh -c "gunicorn -w 4 -b 0.0.0.0 nqmonitor.wsgi"
