--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     environment:
       MYSQL_DATABASE: 'nqmonitor'
       MYSQL_ROOT_PASSWORD: 123456
+    volumes:
+      - ./mysql:/var/lib/mysql
   mongo:
     image: mongo
     restart: unless-stopped
@@ -14,8 +16,10 @@ services:
       MONGO_INITDB_ROOT_USERNAME: 'root'
       MONGO_INITDB_ROOT_PASSWORD: 123456
       MONGO_INITDB_DATABASE: 'nqmonitor'
+    volumes: 
+      - ./mongo:/data/db
   nodequery:
-    build: .
+    image: zecbd/nodequery-server:latest
     links:
       - mysql
       - mongo
